<resources>
    <string name="app_name" translatable="false">EnglishWordsApp</string>
    <string name="buton_continue">continue</string>
    <string name="buton_skip">SKIP</string>
    <string name="text_correct">Correct!</string>
    <string name="text_wrong">Wrong!</string>
    <string name="text_start_screen" translatable="false">Learn!</string>
    <string name="buton_start_studying">Start</string>
    <string name="button_progres_learn">Progres</string>
    <string name="button_settings">Settings</string>
    <string name="text_statistics">Statistics</string>
    <string name="text_learned">Words learned</string>
    <string name="text_words_not_learned">Words not learned</string>
    <string name="text_settings">Settings</string>
    <string name="text_off">off</string>
    <string name="text_on">on</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_light">Light</string>
    <string name="text_dark">Dark</string>
    <string name="text_eng" translatable="false">Eng.</string>
    <string name="text_learning_language">Learning language</string>
    <string name="text_team">Team</string>
    <string name="incorrect_correct_translation">Incorrect! Correct:</string>
</resources>