<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startScreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartScreenActivity">

    <TextView
        android:id="@+id/tvStartScreenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:gravity="center"
        android:layout_marginTop="164dp"
        android:text="@string/text_start_screen"
        android:textColor="@color/text_color"
        android:textSize="50sp"
        android:fontFamily="@font/nunito_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/btStartLearn"
        android:layout_width="311dp"
        android:layout_height="58dp"
        android:layout_marginTop="150dp"
        android:text="@string/buton_start_studying"
        style="@style/ButtonMenuStile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartScreenText" />

    <android.widget.Button
        android:id="@+id/btProgressLearn"
        android:layout_width="311dp"
        android:layout_height="58dp"
        android:layout_marginTop="17dp"
        style="@style/ButtonMenuStile"
        android:text="@string/button_progres_learn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btStartLearn" />

    <android.widget.Button
        android:id="@+id/btSettingsApp"
        android:layout_width="311dp"
        android:layout_height="58dp"
        android:layout_marginTop="17dp"
        style="@style/ButtonMenuStile"
        android:text="@string/button_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btProgressLearn" />



</androidx.constraintlayout.widget.ConstraintLayout>