<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:paddingTop="20dp">

    <ImageButton
        android:id="@+id/ibTurnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="close imege button"
        android:src="@drawable/is_close_page"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSettingsWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="86dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/text_settings"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibTurnOff"/>

    <LinearLayout
        android:id="@+id/layoutVariants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="86dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingsWord">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSettings1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_rounded_containers_neutral"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNotificationOnOff"
                android:layout_width="55dp"
                android:layout_height="45dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/text_on"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/text_notifications"
                android:fontFamily="@font/nunito_bold"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSettings3"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_rounded_containers_neutral"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTeamOnOff"
                android:layout_width="66dp"
                android:layout_height="45dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/text_dark"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Team"
                android:fontFamily="@font/nunito_bold"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSettings2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_rounded_containers_neutral"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLearningLanguageOnOff"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/text_eng"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLearningLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/text_learning_language"
                android:fontFamily="@font/nunito_bold"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>